# vut

./: .gitignore  Cargo.toml  README.md  build.cmd  build.ps1  build.py  dub.json  rustfmt.toml  version.json  vut.toml
.github/workflows/: ci.yml  release.yml
chocolatey/: package.nuspec  package.nuspec.vutemplate
chocolatey/tools/: ChocolateyInstall.ps1
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/command/: bump.rs  generate.rs  get.rs  init.rs  mod.rs  set.rs
cli/src/ui/: mod.rs  stderr.rs
lib/: Cargo.toml
lib/src/: lib.rs  ui.rs  version.rs
lib/src/file_updater/: custom_regex.rs
lib/src/project/: error.rs  generate_template.rs  mod.rs  update_file.rs  update_version_source.rs
lib/src/project/config/: glob.rs  mod.rs  regex.rs
lib/src/template/: mod.rs
lib/src/template/processor/: vut.rs
lib/src/util/: config.rs  path.rs  textfile.rs
lib/src/version_source/: cargo.rs  custom_regex.rs  mod.rs  npm.rs  pyproject.rs
source/: app.d
source/commands/: bumpcommand.d  command.d  generatecommand.d  getcommand.d  initcommand.d  package.d  setcommand.d
source/services/: configparser.d  filelocator.d  vutservice.d
source/utils/: configparser.d  filelocator.d  indentation.d  semver.d  templating.d
src/: config.rs  default_config.toml  main.rs  template.rs  version.rs  vut.rs
src/cli/: main.rs
src/cli/command/: get.rs  init.rs  mod.rs
src/command/: bump.rs  generate.rs  get.rs  init.rs  mod.rs  set.rs
src/file_updater/: custom_regex.rs  mod.rs
src/lib/: version.rs
src/lib/file_updater/: custom_regex.rs  mod.rs
src/lib/project/: error.rs  generate_template.rs  mod.rs  update_version_source.rs
src/lib/project/config/: custom_file_updater.rs  default_config.toml  example_config.toml  mod.rs  regex.rs  templates.rs  update_files.rs  update_version_sources.rs
src/lib/template/processor/: mod.rs
src/lib/util/: fs.rs  textfile.rs
src/lib/version_source/: cargo.rs  custom_regex.rs  mod.rs  npm.rs  version_file.rs
src/template/: mod.rs
src/template/processor/: classic.rs  mod.rs  vut.rs
src/template_processor/: mod.rs
src/util/: config.rs  fs.rs  mod.rs  path.rs  textfile.rs
src/version_source/: cargo.rs  custom_regex.rs  mod.rs  npm.rs  version_file.rs
src/version_source/sources/: mod.rs  version_file.rs
src/vut/: config.rs  default_config.toml  generate_template.rs  ignore.rs  mod.rs  update_file.rs  update_version_source.rs
src/vut/config/: custom_file_updater.rs  custom_source_type.rs  default_config.toml  example_config.toml  glob.rs  mod.rs  regex.rs  template_processor.rs  templates.rs  update_files.rs  update_version_sources.rs
