[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace]
resolver = "2"

members = [
  "cli",
  "lib",
]

[workspace.dependencies]
clap = "4.5.6"
encoding = "0.2.33"
globset = "0.4.14"
once_cell = "1.19.0"
regex = "1.10.5"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.61"
toml = "0.8.14"
toml_edit = "0.22.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
