[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace]
resolver = "2"

members = [
  "cli",
  "lib",
]

[workspace.dependencies]
clap = "4.5.17"
encoding = "0.2.33"
globset = "0.4.15"
once_cell = "1.19.0"
regex = "1.10.6"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
toml = "0.8.19"
toml_edit = "0.22.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
