[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace]
resolver = "2"

members = ["cli", "lib"]

[workspace.dependencies]
clap = "4.5.31"
encoding_rs = "0.8.35"
globset = "0.4.16"
regex = "1.11.1"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.11"
toml = "0.8.20"
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
