[package]
name = "vut-cli"
version = "0.1.3"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vut"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
vut = { path = "../lib" }
