[package]
name = "vut-cli"
version = "0.2.0"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[[bin]]
name = "vut"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
vut = { path = "../lib" }
