[package]
name = "vut"
version = "0.1.3"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
globset = "0.4.9"
once_cell = "1.13.1"
regex = "1.6.0"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = { version = "1.0.83", features = ["preserve_order"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.32"
toml_edit = { version = "0.15.0", features = ["easy"] }
tracing = "0.1.36"
walkdir = "2.3.2"
