[package]
name = "vut"
version = "0.2.0"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
encoding_rs = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
